syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.starter.grpc.proto";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);

  rpc ListUsers (ListRequest) returns (stream UserResponse);

  rpc CreateUsers (stream CreateUserRequest) returns (CreateSummary);

  rpc Chat (stream ChatMessage) returns (stream ChatMessage);
}

message GetUserRequest {
  int64 id = 1;
}

message ListRequest {
  int32 limit = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message ChatMessage {
  string message = 1;
  int64 timestamp = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message CreateSummary {
  int32 total_created = 1;
  string message = 2;
}